Renamed and Revised EmployeeController to EmployeeSalaryComparisonController, plus split out models from controller files and created Model classes in Models folder.

--- a/Esra.Web/Views/EmployeeSalaryComparison/Index.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Esra.Web.Controllers.EmployeeViewModel
+﻿@model Esra.Web.Models.EmployeeSalaryComparisonViewModel
 @{
     ViewBag.Title = "Employee Selection";
 }
