Added remaining updated files that should have been in last commit.

--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -62,11 +62,13 @@
 <div id="salary-scale-partial">
     @{
         @Html.Partial("_SalaryScale", Model.SalaryScaleViewModel)
-
     }
 </div>
 <div id="employee-drop-down-lists">
     @Html.Partial("_EmployeeTitleDepartmentSelectLists")
+</div>
+<div id="report-generation-criteria">
+    @Html.Partial("_ReportGenerationCriteria")
 </div>
 <div id="result">
     @{
