--- a/Esra.Web/Views/EmployeeSalaryComparison/Index.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Esra.Web.Models.EmployeeSalaryComparisonViewModel
 @{
-    ViewBag.Title = "Employee Selection";
+    ViewBag.Title = "Employee Salary Comparison";
 }
 <div id="result">
     @{
