--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -5,18 +5,19 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="@Url.Content("~/favicon.ico")">
-    <link href="@Url.Css("extended.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Css("main.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Css("extended.css")" rel="stylesheet" type="text/css" />
     @*<link href="@Url.Css("jquery-ui-1.8.11.custom.css")" rel="Stylesheet" type="text/css" />*@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js" type="text/javascript"></script>
     @*<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js" type="text/javascript"></script>*@
     <script src="//ajax.microsoft.com/ajax/jquery.validate/1.7/jquery.validate.min.js"></script>
     <script src="@Url.Script("jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
     @if (false)
     { //Load the jquery docs for intellisense
         <script src="../../Scripts/jquery-1.6-vsdoc.js" type="text/javascript"></script>
     }
+    @MvcMiniProfiler.MiniProfiler.RenderIncludes()
+
     @RenderSection("AdditionalScripts", false)
 </head>
 <body>
