Added remainder of files that were supposed to be included in last commit.

--- a/Esra.Web/Views/EmployeeSalaryComparison/_EmployeeTitleDepartmentSelectLists.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/_EmployeeTitleDepartmentSelectLists.cshtml
@@ -100,7 +100,8 @@
     <script language="JavaScript" type="text/javascript">
     <!--
         $('submit').change(function () {
-            debugger; alert("test1"); var selectedText = $(this).find('option:selected').text();
+            //debugger; alert("test1");
+            var selectedText = $(this).find('option:selected').text();
             $('#result').html(selectedText); $(this).parents('form').submit();
         });
 
