--- a/Esra.Web/Views/EmployeeSalaryComparison/_Employees.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/_Employees.cshtml
@@ -1,6 +1,5 @@
 ﻿@model Esra.Web.Models.EmployeeSalaryComparisonViewModel
-@using System.Text;
-@*<legend>Employees</legend>*@@*<ul>*@
+@using System.Text; @*<legend>Employees</legend>*@@*<ul>*@
 @{
     if (Model.Employees.Count > 0)
     {
@@ -15,8 +14,8 @@
         </div>
         <h3>
             Employee Salary Comparison Report</h3>
-        <table>
-            <tbody>
+        <table id="employees">
+            <thead>
                 <tr>
                     <th>
                         Department Name
@@ -73,6 +72,8 @@
                         Comments<br />
                     </th>
                 </tr>
+            </thead>
+            <tbody>
                 @foreach (Esra.Core.Domain.Employee emp in Model.Employees)
                 {
                     <tr>
@@ -88,24 +89,24 @@
                         </td>
                         <td>
                             @{
-                    var hireDate = String.Format("{0:MM/dd/yyyy}", emp.HireDate);
-                    StringBuilder sb = new StringBuilder();
-                    sb.Append(hireDate);
-                    if (emp.PPSCareerHireDateChecked) { sb.Insert(0, "<strong>"); sb.Append("</string>"); }
-                    if (emp.CareerDateHasBeenAdjusted) { sb.Insert(0, "<font style='background: #90EE90;'>"); sb.Append("</font>"); }
-                    WriteLiteral(@sb.ToString());
+                       var hireDate = String.Format("{0:MM/dd/yyyy}", emp.HireDate);
+                       StringBuilder sb = new StringBuilder();
+                       sb.Append(hireDate);
+                       if (emp.PPSCareerHireDateChecked) { sb.Insert(0, "<strong>"); sb.Append("</strong>"); }
+                       if (emp.CareerDateHasBeenAdjusted) { sb.Insert(0, "<font style='background: #90EE90;'>"); sb.Append("</font>"); }
+                       WriteLiteral(@sb.ToString());
                             }
                         </td>
                         <td>@String.Format("{0:0.00}", emp.YearsOfService)
                         </td>
                         <td>
                             @{
-                    var apptDate = String.Format("{0:MM/dd/yyyy}", emp.BeginDate);
-                    sb.Clear();
-                    sb.Append(hireDate);
-                    if (emp.PPSApptHireDateChecked) { sb.Insert(0, "<strong>"); sb.Append("</string>"); }
-                    if (emp.ApptDateHasBeenAdjusted) { sb.Insert(0, "<font style='background: #90EE90;'>"); sb.Append("</font>"); }
-                    WriteLiteral(@sb.ToString());
+                       var apptDate = String.Format("{0:MM/dd/yyyy}", emp.BeginDate);
+                       sb.Clear();
+                       sb.Append(hireDate);
+                       if (emp.PPSApptHireDateChecked) { sb.Insert(0, "<strong>"); sb.Append("</strong>"); }
+                       if (emp.ApptDateHasBeenAdjusted) { sb.Insert(0, "<font style='background: #90EE90;'>"); sb.Append("</font>"); }
+                       WriteLiteral(@sb.ToString());
                             }
                         </td>
                         <td>@String.Format("{0:0.00}", emp.TimeInTitle)
@@ -125,5 +126,4 @@
             </tbody>
         </table>
     </div>
-@* </li>*@ } }
-@* </ul>*@ @*</fieldset>*@
+@* </li>*@ } }@* </ul>*@ @*</fieldset>*@
