--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -22,6 +22,18 @@
             "sPaginationType": "full_numbers"
         });
 
+        $('#employees a.edit-row').live('click', function (e) {
+            var row = this.parentNode.parentNode;
+            dtable.fnOpen(row, fnFormatDetails(dtable, row), 'details');
+            e.preventDefault();
+        });
+
+        $('#employees a.close-row').live('click', function (e) {
+            var row = this.parentNode.parentNode.parentNode.parentNode.parentNode.parentNode.previousSibling;
+            dtable.fnClose(row);
+            e.preventDefault();
+        });
+
         $('#titlecode-drop-down').change(function () {
             //debugger;
 
@@ -66,6 +78,20 @@
             );
         });
     });
+
+    /* Formating function for row details */
+    function fnFormatDetails(dTable, row) {
+        var aData = dTable.fnGetData(row);
+        var sOut = aData[5] + '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">';
+        sOut += '<tr><td>Hire Date:</td><td><input type="text" value="' + aData[6] + '"/></td></tr>';
+        sOut += '<tr><td>Begin Date:</td><td><input type="text" value="' + aData[8] + '"/></td></tr>';
+        sOut += '<tr><td>Experience Begin Date:</td><td><input type="text" value="' + aData[10] + '"/></td></tr>';
+        sOut += '<tr><td>Extra info:</td><td>And any further details here (images etc)</td></tr>';
+        sOut += '<tr><td>&nbsp;</td><td><input type="submit" value="Save" /><a class="close-row" href="#">Close</a></td></tr>';
+        sOut += '</table>';
+
+        return sOut;
+    }
 </script>
 </div>
 <div id="salary-scale-partial">
