Moved the bolding and highlighting into css and added a helper to get the class names

--- a/Esra.Web/Css/extended.css
+++ b/Esra.Web/Css/extended.css
@@ -61,3 +61,13 @@ fieldset.display-form
 {
     z-index: 0;
 }
+
+.date-checked 
+{
+    font-weight: bold;
+}
+
+.date-adjusted 
+{
+    background-color: #90EE90;
+}
